[package]
name = "fastfs-server"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
dotenv = "0.15.0"
fastnear-primitives = "0.1.0"
openssl-probe = { version = "0.1.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.38", features = ["time", "sync", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.13", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7.9"
borsh = { version = "1.5.0", features = ["derive"] }
redis = { version = "0.26.0", features = ["tokio-comp", "tokio-native-tls-comp", "streams"] }
